--- a/coolpage.css
+++ b/coolpage.css
@@ -1,40 +1,3 @@
 body{
-    font-size: 200px;
-    display: flex;
-    flex-direction: column;
-    background-color: lightpink;
-    text-align: center;
-    flex-wrap: wrap;
-}
-
-header{
-    background-color: darkkhaki;
-
-}
-
-nav{
-    background-color: crimson;
-}
-
-main{
-    float: right;
-}
-
-footer{
-    font-size: 20px;
-    color: dodgerblue
-}
-
-#picspage{
-    background-color: lightpink;
-}
-
-
-.bitcharoo{
-    float: right;
-}
-
-p{
-    font-size: 50px;
-    color: yellowgreen;
+    background-color: cornsilk;
 }
