--- a/coolpage.css
+++ b/coolpage.css
@@ -3,6 +3,7 @@ body{
 }
 header{
     background-color: cadetblue;
+    border-radius: 20px;
 }
 nav{
     background-color: darkseagreen;
@@ -10,7 +11,10 @@ nav{
 content{
     background-color: deepskyblue;
     font-size: 30px;
+    border-radius: 20px;
 }
 footer{
     background-color: darkmagenta;
+    border-radius: 30px;
+    text-align: center;
 }
