--- a/coolpage.css
+++ b/coolpage.css
@@ -8,6 +8,7 @@ header{
 }
 nav{
     background-color: darkseagreen;
+    font-size: 30px;
 }
 content{
     background-color: deepskyblue;
@@ -15,6 +16,6 @@ content{
     border-radius: 20px;
 }
 footer{
-    background-color: darkmagenta;
+    background-color: orange;
     border-radius: 30px;
 }
