--- a/coolpage.css
+++ b/coolpage.css
@@ -1,6 +1,8 @@
 body{
     background-color: cornsilk;
     text-align: center;
+    font-size: 30px;
+    color: blueviolet;
 }
 header{
     background-color: cadetblue;
