--- a/coolpage.css
+++ b/coolpage.css
@@ -1,23 +1,26 @@
 body{
-    background-color: cornsilk;
+    background-color: rgb(142, 175, 194);
     text-align: center;
     font-size: 30px;
     color: blueviolet;
+    font-size: 200px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 header{
     background-color: cadetblue;
-    border-radius: 20px;
+    border-radius: 50px;
+    font-size: 100px;
 }
 nav{
-    background-color: darkseagreen;
-    font-size: 30px;
+    font-size: 60px;
 }
 content{
-    background-color: deepskyblue;
-    font-size: 30px;
+    background-color: azure;
+    font-size: 50px;
     border-radius: 20px;
 }
 footer{
-    background-color: orange;
     border-radius: 30px;
 }
